WIP on CensNet integration.

--- a/notebooks/cens_net_test.ipynb
+++ b/notebooks/cens_net_test.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "c64c3214-c2ab-463a-840c-a14c8a70ec28",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/daniel/.pyenv/versions/3.8.6/lib/python3.8/pickle.py:1581: DeprecationWarning: Please use `csr_matrix` from the `scipy.sparse` namespace, the `scipy.sparse.csr` namespace is deprecated.\n",
+      "  return getattr(sys.modules[module], name)\n",
+      "/home/daniel/git/cotton_flower_mot/.venv/lib/python3.8/site-packages/spektral/utils/io.py:25: DeprecationWarning: Please use `csr_matrix` from the `scipy.sparse` namespace, the `scipy.sparse.csr` namespace is deprecated.\n",
+      "  return pickle.load(f, encoding=\"latin1\")\n",
+      "/home/daniel/git/cotton_flower_mot/.venv/lib/python3.8/site-packages/spektral/datasets/citation.py:108: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
+      "  a = nx.adjacency_matrix(nx.from_dict_of_lists(graph))  # CSR\n",
+      "/home/daniel/git/cotton_flower_mot/.venv/lib/python3.8/site-packages/networkx/linalg/graphmatrix.py:173: DeprecationWarning: \n",
+      "\n",
+      "The scipy.sparse array containers will be used instead of matrices\n",
+      "in Networkx 3.0. Use `to_scipy_sparse_array` instead.\n",
+      "  return nx.to_scipy_sparse_matrix(G, nodelist=nodelist, dtype=dtype, weight=weight)\n",
+      "/home/daniel/git/cotton_flower_mot/.venv/lib/python3.8/site-packages/scipy/sparse/_index.py:146: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
+      "  self._set_arrayXarray(i, j, x)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -18,20 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/daniel/.pyenv/versions/3.8.5/lib/python3.8/pickle.py:1581: DeprecationWarning: Please use `csr_matrix` from the `scipy.sparse` namespace, the `scipy.sparse.csr` namespace is deprecated.\n",
-      "  return getattr(sys.modules[module], name)\n",
-      "/home/daniel/git/mot/.venv/lib/python3.8/site-packages/spektral/utils/io.py:25: DeprecationWarning: Please use `csr_matrix` from the `scipy.sparse` namespace, the `scipy.sparse.csr` namespace is deprecated.\n",
-      "  return pickle.load(f, encoding=\"latin1\")\n",
-      "/home/daniel/git/mot/.venv/lib/python3.8/site-packages/spektral/datasets/citation.py:108: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
-      "  a = nx.adjacency_matrix(nx.from_dict_of_lists(graph))  # CSR\n",
-      "/home/daniel/git/mot/.venv/lib/python3.8/site-packages/networkx/linalg/graphmatrix.py:173: DeprecationWarning: \n",
-      "\n",
-      "The scipy.sparse array containers will be used instead of matrices\n",
-      "in Networkx 3.0. Use `to_scipy_sparse_array` instead.\n",
-      "  return nx.to_scipy_sparse_matrix(G, nodelist=nodelist, dtype=dtype, weight=weight)\n",
-      "/home/daniel/git/mot/.venv/lib/python3.8/site-packages/scipy/sparse/_index.py:146: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
-      "  self._set_arrayXarray(i, j, x)\n",
-      "/home/daniel/git/mot/.venv/lib/python3.8/site-packages/spektral/datasets/citation.py:189: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+      "/home/daniel/git/cotton_flower_mot/.venv/lib/python3.8/site-packages/spektral/datasets/citation.py:189: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  return np.array(mask, dtype=np.bool)\n"
      ]
@@ -48,10 +54,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "20c82e46-ccf7-4c63-84c1-b3fdf9dfd33b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-21 10:37:25.031261: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-06-21 10:37:25.032900: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.033191: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublas.so.11'; dlerror: libcublas.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.033425: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcublasLt.so.11'; dlerror: libcublasLt.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.033655: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcufft.so.10'; dlerror: libcufft.so.10: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.033908: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcurand.so.10'; dlerror: libcurand.so.10: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.034214: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.034477: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusparse.so.11'; dlerror: libcusparse.so.11: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.034715: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
+      "2022-06-21 10:37:25.034745: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "2022-06-21 10:37:25.057990: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-06-21 10:37:25.119116: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 29333056 exceeds 10% of free system memory.\n",
+      "2022-06-21 10:37:25.256152: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 29333056 exceeds 10% of free system memory.\n",
+      "2022-06-21 10:37:25.279340: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 29333056 exceeds 10% of free system memory.\n",
+      "2022-06-21 10:37:25.330144: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 29333056 exceeds 10% of free system memory.\n",
+      "2022-06-21 10:37:25.399780: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 29333056 exceeds 10% of free system memory.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -67,10 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "da84277e-a31f-4ce6-8e89-24bb62f032ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-06-21 10:37:33,357 - tensorflow - WARNING - Mixed precision compatibility check (mixed_float16): WARNING\n",
+      "The dtype policy mixed_float16 may run slowly because this machine does not have a GPU. Only Nvidia GPUs with compute capability of at least 7.0 run quickly with mixed_float16.\n",
+      "If you will use compatible GPU(s) not attached to this host, e.g. by running a multi-worker model, you can ignore this warning. This message will only be logged once\n"
+     ]
+    }
+   ],
    "source": [
     "from cotton_flower_mot.pipelines.model_training.graph_utils import compute_pairwise_similarities\n",
     "from cotton_flower_mot.pipelines.model_training.similarity_utils import cosine_similarity\n",
@@ -91,10 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "4d908ac0-865a-4c39-9612-12d1df82d89e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-06-21 10:37:40,905 - tensorflow - WARNING - AutoGraph could not transform <bound method CensNetConv.call of <spektral.layers.convolutional.censnet_conv.CensNetConv object at 0x7f675c5b1730>> and will run it as-is.\n",
+      "Cause: mangled names are not yet supported\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <bound method CensNetConv.call of <spektral.layers.convolutional.censnet_conv.CensNetConv object at 0x7f675c5b1730>> and will run it as-is.\n",
+      "Cause: mangled names are not yet supported\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras import Input, Model, layers\n",
     "from spektral.layers import CensNetConv\n",
@@ -351,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
