--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "00c76205-50b7-43ba-b733-d5f59c343003",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-08 15:09:17,243 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2023-02-10 12:22:19,034 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2023-02-08 15:09:17,401 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2023-02-08 15:09:17,402 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2023-02-08 15:09:17,406 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
+      "2023-02-10 12:22:19,164 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/kedro/framework/context/context.py:339: UserWarning: Credentials not found in your Kedro project config.\n",
+      "No files found in ['/home/daniel/git/self-supervised-learning/conf/base', '/home/daniel/git/self-supervised-learning/conf/local'] matching the glob pattern(s): ('credentials*', 'credentials*/**', '**/credentials*')\n",
+      "  warn(f\"Credentials not found in your Kedro project config.\\n{str(exc)}\")\n",
+      "\n",
+      "2023-02-10 12:22:19,176 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2023-02-10 12:22:19,176 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2023-02-10 12:22:19,182 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-08 15:09:17.406 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n",
-      "2023-02-08 15:09:17.410 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:29 - Using cpu device.\n"
+      "2023-02-10 12:22:19.183 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-08 15:09:17,476 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
+      "2023-02-10 12:22:19,481 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:12: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) < LooseVersion(\"1.0.0\"):\n",
+      "\n",
+      "2023-02-10 12:22:19,482 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:68: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) >= LooseVersion(\"1.1.0\"):\n",
+      "\n",
+      "2023-02-10 12:22:19,736 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/rcmod.py:82: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(mpl.__version__) >= \"3.0\":\n",
+      "\n",
+      "2023-02-10 12:22:19,737 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/setuptools/_distutils/version.py:346: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  other = LooseVersion(other)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-10 12:22:19.751 | INFO     | self_supervised.pipelines.train_simclr.nodes:<module>:29 - Using cpu device.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-02-10 12:22:19,819 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
      ]
     }
    ],
@@ -41,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
@@ -103,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [
@@ -453,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
