--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "00c76205-50b7-43ba-b733-d5f59c343003",
    "metadata": {},
    "outputs": [
@@ -10,25 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-17 12:31:00,973 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2023-02-19 11:15:22,324 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2023-02-17 12:31:01,114 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2023-02-17 12:31:01,115 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2023-02-17 12:31:01,119 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
+      "2023-02-19 11:15:22,456 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/kedro/framework/context/context.py:339: UserWarning: Credentials not found in your Kedro project config.\n",
+      "No files found in ['/home/daniel/git/self-supervised-learning/conf/base', '/home/daniel/git/self-supervised-learning/conf/local'] matching the glob pattern(s): ('credentials*', 'credentials*/**', '**/credentials*')\n",
+      "  warn(f\"Credentials not found in your Kedro project config.\\n{str(exc)}\")\n",
+      "\n",
+      "2023-02-19 11:15:22,475 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2023-02-19 11:15:22,475 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2023-02-19 11:15:22,487 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-17 12:31:01.120 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
+      "2023-02-19 11:15:22.487 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-17 12:31:01,184 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
+      "2023-02-19 11:15:22,685 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:12: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) < LooseVersion(\"1.0.0\"):\n",
+      "\n",
+      "2023-02-19 11:15:22,686 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:68: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) >= LooseVersion(\"1.1.0\"):\n",
+      "\n",
+      "2023-02-19 11:15:22,861 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/rcmod.py:82: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(mpl.__version__) >= \"3.0\":\n",
+      "\n",
+      "2023-02-19 11:15:22,862 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/setuptools/_distutils/version.py:346: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  other = LooseVersion(other)\n",
+      "\n",
+      "2023-02-19 11:15:22,957 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
      ]
     }
    ],
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
@@ -102,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [
@@ -452,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
@@ -479,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
