Switch back to validating with the SimCLR model.

--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -10,41 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-20 11:52:17,562 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2023-02-22 09:44:00,733 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2023-02-20 11:52:17,700 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/kedro/framework/context/context.py:339: UserWarning: Credentials not found in your Kedro project config.\n",
+      "2023-02-22 09:44:00,973 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/kedro/framework/context/context.py:339: UserWarning: Credentials not found in your Kedro project config.\n",
       "No files found in ['/home/daniel/git/self-supervised-learning/conf/base', '/home/daniel/git/self-supervised-learning/conf/local'] matching the glob pattern(s): ('credentials*', 'credentials*/**', '**/credentials*')\n",
       "  warn(f\"Credentials not found in your Kedro project config.\\n{str(exc)}\")\n",
       "\n",
-      "2023-02-20 11:52:17,712 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2023-02-20 11:52:17,712 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2023-02-20 11:52:17,717 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
+      "2023-02-22 09:44:00,993 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2023-02-22 09:44:00,994 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2023-02-22 09:44:01,005 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-20 11:52:17.718 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
+      "2023-02-22 09:44:01.005 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-20 11:52:17,807 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:12: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "2023-02-22 09:44:01,130 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:12: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
       "  if LooseVersion(torch.__version__) < LooseVersion(\"1.0.0\"):\n",
       "\n",
-      "2023-02-20 11:52:17,808 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:68: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "2023-02-22 09:44:01,131 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:68: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
       "  if LooseVersion(torch.__version__) >= LooseVersion(\"1.1.0\"):\n",
       "\n",
-      "2023-02-20 11:52:18,008 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/rcmod.py:82: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "2023-02-22 09:44:01,393 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/rcmod.py:82: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
       "  if LooseVersion(mpl.__version__) >= \"3.0\":\n",
       "\n",
-      "2023-02-20 11:52:18,009 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/setuptools/_distutils/version.py:346: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "2023-02-22 09:44:01,394 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/setuptools/_distutils/version.py:346: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
       "  other = LooseVersion(other)\n",
       "\n",
-      "2023-02-20 11:52:18,091 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
+      "2023-02-22 09:44:01,483 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
      ]
     }
    ],
@@ -475,8 +475,16 @@
    "source": [
     "import torch\n",
     "\n",
-    "torch.save({\"model\": new_yolo}, \"tt_yolov5l.pt\")"
+    "torch.save({\"model\": new_yolo}, \"simclr_yolov5l.pt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cfd0062-d01a-41e9-9b23-db0c8477041c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -495,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
