Update linear regression notebook.
The results of this are now more robust.

--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "00c76205-50b7-43ba-b733-d5f59c343003",
    "metadata": {},
    "outputs": [
@@ -10,25 +10,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-23 09:10:58,767 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2023-03-01 13:33:44,200 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2023-02-23 09:10:58,898 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2023-02-23 09:10:58,899 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2023-02-23 09:10:58,903 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
+      "2023-03-01 13:33:44,204 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/kedro/framework/startup.py:98: DeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
+      "  warnings.warn(\n",
+      "\n",
+      "2023-03-01 13:33:44,339 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2023-03-01 13:33:44,339 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2023-03-01 13:33:44,345 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-23 09:10:58.903 | WARNING  | self_supervised.data_sets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
+      "2023-03-01 13:33:44.345 | WARNING  | self_supervised.extras.datasets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-23 09:10:58,974 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
+      "2023-03-01 13:33:44,417 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:12: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) < LooseVersion(\"1.0.0\"):\n",
+      "\n",
+      "2023-03-01 13:33:44,417 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/thop/profile.py:68: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(torch.__version__) >= LooseVersion(\"1.1.0\"):\n",
+      "\n",
+      "2023-03-01 13:33:44,536 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/rcmod.py:82: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if LooseVersion(mpl.__version__) >= \"3.0\":\n",
+      "\n",
+      "2023-03-01 13:33:44,537 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/setuptools/_distutils/version.py:346: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  other = LooseVersion(other)\n",
+      "\n",
+      "2023-03-01 13:33:44,545 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/cm.py:1582: MatplotlibDeprecationWarning: The register_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps.register(name)`` instead.\n",
+      "  mpl_cm.register_cmap(_name, _cmap)\n",
+      "\n",
+      "2023-03-01 13:33:44,545 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.8/site-packages/seaborn/cm.py:1583: MatplotlibDeprecationWarning: The register_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps.register(name)`` instead.\n",
+      "  mpl_cm.register_cmap(_name + \"_r\", _cmap_r)\n",
+      "\n",
+      "2023-03-01 13:33:44,684 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
      ]
     }
    ],
@@ -40,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
@@ -102,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [
@@ -452,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
@@ -461,6 +482,14 @@
     "\n",
     "torch.save({\"model\": new_yolo}, \"simclr_yolov5l.pt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a86dc7da-5571-4e41-a06e-2e04fe7f89e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
