WIP on active learning.

--- a/notebooks/model_eval.ipynb
+++ b/notebooks/model_eval.ipynb
@@ -93,7 +93,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001B[1;36m183952\u001B[0m\n"
+       "\u001b[1;36m183952\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -253,7 +253,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001B[1;36m0.5545125404993693\u001B[0m\n"
+       "\u001b[1;36m0.5545125404993693\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -319,7 +319,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001B[1;36m0.024617818494637806\u001B[0m\n"
+       "\u001b[1;36m0.024617818494637806\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -348,7 +348,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001B[1;36m0.7852525313695272\u001B[0m\n"
+       "\u001b[1;36m0.7852525313695272\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -410,16 +410,16 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001B[31m╭─\u001B[0m\u001B[31m──────────────────────────────\u001B[0m\u001B[31m \u001B[0m\u001B[1;31mTraceback \u001B[0m\u001B[1;2;31m(most recent call last)\u001B[0m\u001B[31m \u001B[0m\u001B[31m───────────────────────────────\u001B[0m\u001B[31m─╮\u001B[0m\n",
-       "\u001B[31m│\u001B[0m in \u001B[92m<module>\u001B[0m                                                                                      \u001B[31m│\u001B[0m\n",
-       "\u001B[31m│\u001B[0m                                                                                                  \u001B[31m│\u001B[0m\n",
-       "\u001B[31m│\u001B[0m \u001B[31m❱ \u001B[0m 1 cam0_batch = torch.stack(cam0_batch).to(torch.float) / \u001B[94m255\u001B[0m                                  \u001B[31m│\u001B[0m\n",
-       "\u001B[31m│\u001B[0m   \u001B[2m 2 \u001B[0mcam1_batch = torch.stack(cam1_batch).to(torch.float) / \u001B[94m255\u001B[0m                                  \u001B[31m│\u001B[0m\n",
-       "\u001B[31m│\u001B[0m   \u001B[2m 3 \u001B[0mcam2_batch = torch.stack(cam2_batch).to(torch.float) / \u001B[94m255\u001B[0m                                  \u001B[31m│\u001B[0m\n",
-       "\u001B[31m│\u001B[0m   \u001B[2m 4 \u001B[0m                                                                                            \u001B[31m│\u001B[0m\n",
-       "\u001B[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001B[0m\n",
-       "\u001B[1;91mRuntimeError: \u001B[0mstack expects each tensor to be equal size, but got \u001B[1m[\u001B[0m\u001B[1;36m3\u001B[0m, \u001B[1;36m480\u001B[0m, \u001B[1;36m640\u001B[0m\u001B[1m]\u001B[0m at entry \u001B[1;36m0\u001B[0m and \u001B[1m[\u001B[0m\u001B[1;36m3\u001B[0m, \u001B[1;36m540\u001B[0m, \u001B[1;36m960\u001B[0m\u001B[1m]\u001B[0m at \n",
-       "entry \u001B[1;36m1\u001B[0m\n"
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m                                                                                      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m 1 cam0_batch = torch.stack(cam0_batch).to(torch.float) / \u001b[94m255\u001b[0m                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m 2 \u001b[0mcam1_batch = torch.stack(cam1_batch).to(torch.float) / \u001b[94m255\u001b[0m                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m 3 \u001b[0mcam2_batch = torch.stack(cam2_batch).to(torch.float) / \u001b[94m255\u001b[0m                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m 4 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mRuntimeError: \u001b[0mstack expects each tensor to be equal size, but got \u001b[1m[\u001b[0m\u001b[1;36m3\u001b[0m, \u001b[1;36m480\u001b[0m, \u001b[1;36m640\u001b[0m\u001b[1m]\u001b[0m at entry \u001b[1;36m0\u001b[0m and \u001b[1m[\u001b[0m\u001b[1;36m3\u001b[0m, \u001b[1;36m540\u001b[0m, \u001b[1;36m960\u001b[0m\u001b[1m]\u001b[0m at \n",
+       "entry \u001b[1;36m1\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -477,14 +477,14 @@
       ],
       "text/plain": [
        "\n",
-       "\u001B[1;35mtensor\u001B[0m\u001B[1m(\u001B[0m\u001B[1m[\u001B[0m\u001B[1m[\u001B[0m \u001B[1;36m0.90070\u001B[0m,  \u001B[1;36m0.00829\u001B[0m, \u001B[1;36m-0.00886\u001B[0m, \u001B[1;36m-0.04044\u001B[0m,  \u001B[1;36m0.08395\u001B[0m, \u001B[1;36m-0.06589\u001B[0m,  \u001B[1;36m0.07924\u001B[0m,  \u001B[1;36m0.08774\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m \u001B[1;36m0.03898\u001B[0m,  \u001B[1;36m0.09094\u001B[0m,  \u001B[1;36m0.23043\u001B[0m,  \u001B[1;36m0.11893\u001B[0m, \u001B[1;36m-0.00713\u001B[0m, \u001B[1;36m-0.00839\u001B[0m, \u001B[1;36m-0.01857\u001B[0m,  \u001B[1;36m0.01860\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[1;36m-0.05015\u001B[0m,  \u001B[1;36m0.16874\u001B[0m,  \u001B[1;36m0.38497\u001B[0m,  \u001B[1;36m0.20100\u001B[0m,  \u001B[1;36m0.00793\u001B[0m, \u001B[1;36m-0.04355\u001B[0m,  \u001B[1;36m0.16713\u001B[0m, \u001B[1;36m-0.01412\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[1;36m-0.01698\u001B[0m,  \u001B[1;36m0.03643\u001B[0m,  \u001B[1;36m0.11891\u001B[0m,  \u001B[1;36m0.58509\u001B[0m, \u001B[1;36m-0.04548\u001B[0m,  \u001B[1;36m0.04703\u001B[0m, \u001B[1;36m-0.06355\u001B[0m, \u001B[1;36m-0.04763\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[1;36m-0.01126\u001B[0m,  \u001B[1;36m0.04962\u001B[0m, \u001B[1;36m-0.01285\u001B[0m, \u001B[1;36m-0.02864\u001B[0m,  \u001B[1;36m0.69858\u001B[0m,  \u001B[1;36m0.04611\u001B[0m,  \u001B[1;36m0.01888\u001B[0m,  \u001B[1;36m0.07517\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[1;36m-0.12321\u001B[0m, \u001B[1;36m-0.05116\u001B[0m, \u001B[1;36m-0.00349\u001B[0m,  \u001B[1;36m0.01181\u001B[0m, \u001B[1;36m-0.10367\u001B[0m,  \u001B[1;36m0.51672\u001B[0m,  \u001B[1;36m0.03238\u001B[0m, \u001B[1;36m-0.03226\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m \u001B[1;36m0.07222\u001B[0m,  \u001B[1;36m0.21531\u001B[0m,  \u001B[1;36m0.04477\u001B[0m,  \u001B[1;36m0.01288\u001B[0m,  \u001B[1;36m0.04460\u001B[0m, \u001B[1;36m-0.02330\u001B[0m,  \u001B[1;36m0.87553\u001B[0m, \u001B[1;36m-0.02426\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[1;36m-0.01316\u001B[0m, \u001B[1;36m-0.06250\u001B[0m,  \u001B[1;36m0.12654\u001B[0m,  \u001B[1;36m0.04086\u001B[0m,  \u001B[1;36m0.04306\u001B[0m, \u001B[1;36m-0.08501\u001B[0m,  \u001B[1;36m0.07468\u001B[0m,  \u001B[1;36m0.70740\u001B[0m\u001B[1m]\u001B[0m\u001B[1m]\u001B[0m\u001B[1m)\u001B[0m\n"
+       "\u001b[1;35mtensor\u001b[0m\u001b[1m(\u001b[0m\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m \u001b[1;36m0.90070\u001b[0m,  \u001b[1;36m0.00829\u001b[0m, \u001b[1;36m-0.00886\u001b[0m, \u001b[1;36m-0.04044\u001b[0m,  \u001b[1;36m0.08395\u001b[0m, \u001b[1;36m-0.06589\u001b[0m,  \u001b[1;36m0.07924\u001b[0m,  \u001b[1;36m0.08774\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m \u001b[1;36m0.03898\u001b[0m,  \u001b[1;36m0.09094\u001b[0m,  \u001b[1;36m0.23043\u001b[0m,  \u001b[1;36m0.11893\u001b[0m, \u001b[1;36m-0.00713\u001b[0m, \u001b[1;36m-0.00839\u001b[0m, \u001b[1;36m-0.01857\u001b[0m,  \u001b[1;36m0.01860\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[1;36m-0.05015\u001b[0m,  \u001b[1;36m0.16874\u001b[0m,  \u001b[1;36m0.38497\u001b[0m,  \u001b[1;36m0.20100\u001b[0m,  \u001b[1;36m0.00793\u001b[0m, \u001b[1;36m-0.04355\u001b[0m,  \u001b[1;36m0.16713\u001b[0m, \u001b[1;36m-0.01412\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[1;36m-0.01698\u001b[0m,  \u001b[1;36m0.03643\u001b[0m,  \u001b[1;36m0.11891\u001b[0m,  \u001b[1;36m0.58509\u001b[0m, \u001b[1;36m-0.04548\u001b[0m,  \u001b[1;36m0.04703\u001b[0m, \u001b[1;36m-0.06355\u001b[0m, \u001b[1;36m-0.04763\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[1;36m-0.01126\u001b[0m,  \u001b[1;36m0.04962\u001b[0m, \u001b[1;36m-0.01285\u001b[0m, \u001b[1;36m-0.02864\u001b[0m,  \u001b[1;36m0.69858\u001b[0m,  \u001b[1;36m0.04611\u001b[0m,  \u001b[1;36m0.01888\u001b[0m,  \u001b[1;36m0.07517\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[1;36m-0.12321\u001b[0m, \u001b[1;36m-0.05116\u001b[0m, \u001b[1;36m-0.00349\u001b[0m,  \u001b[1;36m0.01181\u001b[0m, \u001b[1;36m-0.10367\u001b[0m,  \u001b[1;36m0.51672\u001b[0m,  \u001b[1;36m0.03238\u001b[0m, \u001b[1;36m-0.03226\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m \u001b[1;36m0.07222\u001b[0m,  \u001b[1;36m0.21531\u001b[0m,  \u001b[1;36m0.04477\u001b[0m,  \u001b[1;36m0.01288\u001b[0m,  \u001b[1;36m0.04460\u001b[0m, \u001b[1;36m-0.02330\u001b[0m,  \u001b[1;36m0.87553\u001b[0m, \u001b[1;36m-0.02426\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[1;36m-0.01316\u001b[0m, \u001b[1;36m-0.06250\u001b[0m,  \u001b[1;36m0.12654\u001b[0m,  \u001b[1;36m0.04086\u001b[0m,  \u001b[1;36m0.04306\u001b[0m, \u001b[1;36m-0.08501\u001b[0m,  \u001b[1;36m0.07468\u001b[0m,  \u001b[1;36m0.70740\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\u001b[1m)\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -519,14 +519,14 @@
       ],
       "text/plain": [
        "\n",
-       "\u001B[1;35mtensor\u001B[0m\u001B[1m(\u001B[0m\u001B[1m[\u001B[0m\u001B[1m[\u001B[0m \u001B[3;92mTrue\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m,  \u001B[3;92mTrue\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m,  \u001B[3;92mTrue\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m,  \u001B[3;92mTrue\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m,  \u001B[3;92mTrue\u001B[0m, \u001B[3;91mFalse\u001B[0m\u001B[1m]\u001B[0m,\n",
-       "        \u001B[1m[\u001B[0m\u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m, \u001B[3;91mFalse\u001B[0m,  \u001B[3;92mTrue\u001B[0m\u001B[1m]\u001B[0m\u001B[1m]\u001B[0m\u001B[1m)\u001B[0m\n"
+       "\u001b[1;35mtensor\u001b[0m\u001b[1m(\u001b[0m\u001b[1m[\u001b[0m\u001b[1m[\u001b[0m \u001b[3;92mTrue\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m,  \u001b[3;92mTrue\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m,  \u001b[3;92mTrue\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m,  \u001b[3;92mTrue\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m,  \u001b[3;92mTrue\u001b[0m, \u001b[3;91mFalse\u001b[0m\u001b[1m]\u001b[0m,\n",
+       "        \u001b[1m[\u001b[0m\u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m, \u001b[3;91mFalse\u001b[0m,  \u001b[3;92mTrue\u001b[0m\u001b[1m]\u001b[0m\u001b[1m]\u001b[0m\u001b[1m)\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -562,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
