--- a/notebooks/model_conversion.ipynb
+++ b/notebooks/model_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "00c76205-50b7-43ba-b733-d5f59c343003",
    "metadata": {},
    "outputs": [
@@ -10,82 +10,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-28 11:38:48,676 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
+      "2024-03-13 13:34:17,415 - kedro.ipython - INFO - Resolved project path as: /home/daniel/git/self-supervised-learning.\n",
       "To set a different path, run '%reload_kedro <project_root>'\n",
-      "2023-03-28 11:38:48,679 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:98: DeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
+      "2024-03-13 13:34:17,420 - py.warnings - WARNING - /home/daniel/git/self-supervised-learning/.venv/lib/python3.10/site-packages/kedro/framework/startup.py:98: DeprecationWarning: project_version in pyproject.toml is deprecated, use kedro_init_version instead\n",
       "  warnings.warn(\n",
       "\n",
-      "2023-03-28 11:38:48,777 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
-      "2023-03-28 11:38:48,777 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
-      "2023-03-28 11:38:48,782 - kedro.io.data_catalog - INFO - Loading data from 'trained_model' (PytorchModelDataSet)...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-28 11:38:48.783 | WARNING  | self_supervised.extras.datasets.pytorch_model_data_set:_load:42 - CUDA not available, automatically mapping variables to the CPU.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-03-28 11:38:48,824 - kedro.io.data_catalog - INFO - Loading data from 'yolov5_l_description' (YAMLDataSet)...\n"
+      "2024-03-13 13:34:17,502 - kedro.ipython - INFO - Kedro project Self-Supervised Learning\n",
+      "2024-03-13 13:34:17,503 - kedro.ipython - INFO - Defined global variable 'context', 'session', 'catalog' and 'pipelines'\n",
+      "2024-03-13 13:34:17,508 - kedro.io.data_catalog - INFO - Loading data from 'yolov8_l_description' (YAMLDataSet)...\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "\n",
     "%reload_kedro\n",
-    "trained_model = catalog.load(\"trained_model\", version=\"2023-03-29T11.37.00.000Z\")\n",
-    "model_config = catalog.load(\"yolov5_l_description\")"
+    "# trained_model = catalog.load(\"trained_model\", version=\"2023-03-29T11.37.00.000Z\")\n",
+    "model_config = catalog.load(\"yolov8_l_description\")\n",
+    "trained_model = torch.load(\"../checkpoints/checkpoint_30443.pt\", map_location=\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "0d4dda4c-0ab2-40a5-99f9-24c3767ebcf1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "                 from  n    params  module                                  arguments                     \n",
-      "  0                -1  1      7040  yolov5.models.common.Conv               [3, 64, 6, 2, 2]              \n",
-      "  1                -1  1     73984  yolov5.models.common.Conv               [64, 128, 3, 2]               \n",
-      "  2                -1  3    156928  yolov5.models.common.C3                 [128, 128, 3]                 \n",
-      "  3                -1  1    295424  yolov5.models.common.Conv               [128, 256, 3, 2]              \n",
-      "  4                -1  6   1118208  yolov5.models.common.C3                 [256, 256, 6]                 \n",
-      "  5                -1  1   1180672  yolov5.models.common.Conv               [256, 512, 3, 2]              \n",
-      "  6                -1  9   6433792  yolov5.models.common.C3                 [512, 512, 9]                 \n",
-      "  7                -1  1   4720640  yolov5.models.common.Conv               [512, 1024, 3, 2]             \n",
-      "  8                -1  3   9971712  yolov5.models.common.C3                 [1024, 1024, 3]               \n",
-      "  9                -1  1   2624512  yolov5.models.common.SPPF               [1024, 1024, 5]               \n",
-      " 10                -1  1    525312  yolov5.models.common.Conv               [1024, 512, 1, 1]             \n",
-      " 11                -1  1         0  torch.nn.modules.upsampling.Upsample    [None, 2, 'nearest']          \n",
-      " 12           [-1, 6]  1         0  yolov5.models.common.Concat             [1]                           \n",
-      " 13                -1  3   2757632  yolov5.models.common.C3                 [1024, 512, 3, False]         \n",
-      " 14                -1  1    131584  yolov5.models.common.Conv               [512, 256, 1, 1]              \n",
-      " 15                -1  1         0  torch.nn.modules.upsampling.Upsample    [None, 2, 'nearest']          \n",
-      " 16           [-1, 4]  1         0  yolov5.models.common.Concat             [1]                           \n",
-      " 17                -1  3    690688  yolov5.models.common.C3                 [512, 256, 3, False]          \n",
-      " 18                -1  1    590336  yolov5.models.common.Conv               [256, 256, 3, 2]              \n",
-      " 19          [-1, 14]  1         0  yolov5.models.common.Concat             [1]                           \n",
-      " 20                -1  3   2495488  yolov5.models.common.C3                 [512, 512, 3, False]          \n",
-      " 21                -1  1   2360320  yolov5.models.common.Conv               [512, 512, 3, 2]              \n",
-      " 22          [-1, 10]  1         0  yolov5.models.common.Concat             [1]                           \n",
-      " 23                -1  3   9971712  yolov5.models.common.C3                 [1024, 1024, 3, False]        \n",
-      " 24      [17, 20, 23]  1    457725  yolov5.models.yolo.Detect               [80, [[10, 13, 16, 30, 33, 23], [30, 61, 62, 45, 59, 119], [116, 90, 156, 198, 373, 326]], [256, 512, 1024]]\n",
-      "Model summary: 368 layers, 46563709 parameters, 46563709 gradients, 109.6 GFLOPs\n",
+      "                   from  n    params  module                                       arguments                     \n",
+      "  0                  -1  1      1856  ultralytics.nn.modules.conv.Conv             [3, 64, 3, 2]                 \n",
+      "  1                  -1  1     73984  ultralytics.nn.modules.conv.Conv             [64, 128, 3, 2]               \n",
+      "  2                  -1  3    279808  ultralytics.nn.modules.block.C2f             [128, 128, 3, True]           \n",
+      "  3                  -1  1    295424  ultralytics.nn.modules.conv.Conv             [128, 256, 3, 2]              \n",
+      "  4                  -1  6   2101248  ultralytics.nn.modules.block.C2f             [256, 256, 6, True]           \n",
+      "  5                  -1  1   1180672  ultralytics.nn.modules.conv.Conv             [256, 512, 3, 2]              \n",
+      "  6                  -1  6   8396800  ultralytics.nn.modules.block.C2f             [512, 512, 6, True]           \n",
+      "  7                  -1  1   2360320  ultralytics.nn.modules.conv.Conv             [512, 512, 3, 2]              \n",
+      "  8                  -1  3   4461568  ultralytics.nn.modules.block.C2f             [512, 512, 3, True]           \n",
+      "  9                  -1  1    656896  ultralytics.nn.modules.block.SPPF            [512, 512, 5]                 \n",
+      " 10                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 11             [-1, 6]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 12                  -1  3   4723712  ultralytics.nn.modules.block.C2f             [1024, 512, 3]                \n",
+      " 13                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 14             [-1, 4]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 15                  -1  3   1247744  ultralytics.nn.modules.block.C2f             [768, 256, 3]                 \n",
+      " 16                  -1  1    590336  ultralytics.nn.modules.conv.Conv             [256, 256, 3, 2]              \n",
+      " 17            [-1, 12]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 18                  -1  3   4592640  ultralytics.nn.modules.block.C2f             [768, 512, 3]                 \n",
+      " 19                  -1  1   2360320  ultralytics.nn.modules.conv.Conv             [512, 512, 3, 2]              \n",
+      " 20             [-1, 9]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 21                  -1  3   4723712  ultralytics.nn.modules.block.C2f             [1024, 512, 3]                \n",
+      " 22        [15, 18, 21]  1   5644480  ultralytics.nn.modules.head.Detect           [80, [256, 512, 512]]         \n",
+      "Model summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "from yolov5.models.yolo import DetectionModel\n",
+    "from ultralytics.models.yolo.detect.train import DetectionModel\n",
     "\n",
     "# Reset lower layers in the model.\n",
     "yolo = trained_model.encoder.yolo\n",
@@ -105,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "c38d423e-318d-4eb5-8233-54be41e27d1b",
    "metadata": {},
    "outputs": [
@@ -450,19 +437,19 @@
     }
    ],
    "source": [
-    "new_yolo.state_dict()[\"model.13.m.0.cv2.conv.weight\"] == yolo.state_dict()[\"model.13.m.0.cv2.conv.weight\"]"
+    "new_yolo.state_dict()[\"model.12.m.0.cv2.conv.weight\"] == yolo.state_dict()[\"model.12.m.0.cv2.conv.weight\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "454a7de2-bacc-4b7c-bb1a-c74d6a9178f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "\n",
-    "torch.save({\"model\": new_yolo}, \"../simclr_yolov5l.pt\")"
+    "torch.save({\"model\": new_yolo}, \"../yolov8l_ssl_vanilla.pt\")"
    ]
   },
   {
